<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Minimal</string>
    <string name="action_settings">Settings</string>
    <string name="no_to_dos">You don\'t have any todos</string>
    <string name="title">Title</string>
    <string name="remind_me">Remind Me</string>
    <string name="choose_date">Date</string>
    <string name="choose_time">Time</string>
    <string name="remind_date_and_time">Reminder set for %1$s, %2$s %3$s</string>
    <string name="about">About</string>
    <string name="app_version">Version: %1$s</string>
    <string name="contact_me">You can contact me at</string>
    <string name="made_by">Made by Avjinder</string>
    <string name="done_label">Done</string>
    <string name="date_reminder_default">Today</string>
    <string name="date_error_check_again">The date you entered is in the past.</string>
    <string name="night_mode">Night Mode</string>
    <string name="night_mode_on_summary">Night mode is on</string>
    <string name="night_mode_off_summary">Night mode is off</string>
    <string name="description">Description</string>
    <string name="user_label">Label</string>
    <string name="spinner_title">Select label</string>

    <string-array name="snooze_options">
        <item>10 Minutes</item>
        <item>30 Minutes</item>
        <item>1 Hour</item>
    </string-array>

    <string name="snooze">Snooze</string>
    <string name="remove">Remove</string>
    <string name="todo_error">Please enter a Todo</string>
    <string name="recurring_event">Recurring Event</string>
    <string name="button">Button</string>
    <string name="button_rec">Button</string>
    <string name="Recurtextview">TextView</string>
    <string name="Recurrence_Text">Custom Recurrence</string>
    <string name="hint" />
    <string name="repeat_every">Repeat Every:</string>
    <string name="num">num</string>
    <string name="end">End</string>
    <string name="done">Done</string>
    <string name="repeat_on">Repeat On:</string>
    <string name="checkbox">CheckBox</string>
    <string name="never">Never</string>
    <string name="on">On</string>
    <string name="after">After</string>
    <string name="cancel">Cancel</string>
    <string name="text_view">Custom Recurrence</string>
    <string name="ends">Ends</string>
    <string name="occurrences">Occurrences</string>
    <string name="add_recurrence">Add Recurrences</string>
    <string name="select_day">Select Days</string>
    <string name="calender_view">Calender View</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_text">"Start On: "</string>
</resources>
