<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rec1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textSize="@dimen/mdtp_ampm_label_size"
    tools:context=".Reminder.RecurringActivity"
    tools:layout_marginLeft="5dp" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/mdtp_ampm_label_size"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="171dp"
        android:layout_marginRight="171dp"
        android:layout_marginBottom="633dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/Recurrence_Text" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignTop="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="627dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="572dp"
        android:text="@string/repeat_every" />

    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="63dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"

        android:layout_marginTop="53dp"
        android:layout_marginEnd="201dp"
        android:layout_marginRight="201dp"
        android:ems="10"
        android:hint="@string/num"
        android:inputType="numberDecimal" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="162dp"
        android:layout_height="33dp"
        android:layout_alignTop="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:layout_marginBottom="566dp"
        android:entries="@array/repeatOn"
        android:spinnerMode="dropdown" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignTop="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="181dp"
        android:layout_marginBottom="473dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="529dp"
        android:text="@string/repeat_on" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="271dp"
        android:layout_marginRight="271dp"
        android:layout_marginBottom="483dp"
        android:text="@string/checkbox" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="117dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="268dp"
        android:layout_marginRight="268dp"
        android:layout_marginBottom="427dp"
        android:text="@string/end" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="237dp"
        android:layout_marginEnd="82dp"
        android:layout_marginRight="82dp"
        android:layout_marginBottom="326dp">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/radio_never"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/never" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/radio_two"
            android:layout_width="279dp"
            android:layout_height="wrap_content"
            android:text="@string/on" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/radio_three"
            android:layout_width="199dp"
            android:layout_height="wrap_content"
            android:text="@string/after" />

    </RadioGroup>

    <Button
        android:id="@+id/button4"
        android:layout_width="99dp"
        android:layout_height="54dp"
        android:layout_alignTop="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="439dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="162dp"
        android:width="40dp"
        android:height="100sp"
        android:text="@string/done"
        android:textColor="@color/mdtp_white" />

    <Button
        android:id="@+id/button5"
        android:layout_width="111dp"
        android:layout_height="53dp"
        android:layout_alignTop="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="122dp"
        android:layout_marginLeft="122dp"
        android:layout_marginTop="441dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="161dp"
        android:layout_toStartOf="@+id/button4"
        android:layout_toLeftOf="@+id/button4"
        android:width="40dp"
        android:text="@string/cancel"
        android:textColor="@color/mdtp_white" />


</RelativeLayout>